css/style.css
@import url('https://fonts.cdnfonts.com/css/minecrafter-alt');
@font-face {
    font-family: "Minecrafter Alt";
    src: url('https://fonts.cdnfonts.com/css/minecrafter-alt');
}

#game_field {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    outline: none;
    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
    /* mobile webkit */
    /* background-color: white; */
    background-position: center;
    background-repeat: repeat;
    width: 100%;
    height: 100%;
}

html,
body {
    font-family: "Minecrafter Alt";
    /* filter: opacity(1); */
    /* position: absolute;
    object-fit: cover;
    /* background-size: 400px; */
    margin: 0;
    top: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    /* display: flex; */
    touch-action: none;
    /* object-fit: cover; */
    /* background-attachment: fixed; */
}

#bg {
    /* background-image: url('https://blog.1a23.com/wp-content/uploads/sites/2/2020/02/pattern-7.svg'); */
    background-repeat: repeat;
    position: fixed;
    width: 100%;
    height: 100%;
    background-size: contain;
    z-index: -2;
    background-color: white;
}

#myVideo {
    z-index: -1;
    object-fit: cover;
    width: 100vw;
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    display: block;
    /* background-color: rgb(255, 255, 255); */
}

.darkTheme {
    filter: invert(100%);
}

